--- a/my-app/src/style/sales.css
+++ b/my-app/src/style/sales.css
@@ -2,12 +2,27 @@
 	width: 100%;
 }
 .last-news {
+	margin: 0 auto;
+	text-align: center;
+	margin-top: 20px;
+
 }
 .block-news {
+	width: 100%;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-around;
+
 }
 .conteiner {
+	width: 20vw;
+	border: 2px solid #333;
+	height: 50vh;
+	display: flex;
+	flex-direction: column;
 }
 .conteiner-img {
 }
 .text-news {
+	
 }
