--- a/my-app/src/style/sales.css
+++ b/my-app/src/style/sales.css
@@ -7,30 +7,63 @@
 	text-align: center;
 	margin-top: 20px;
 	margin-bottom: 20px;
-
 }
 .block-news {
 	width: 100%;
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-around;
-	flex-wrap: nowrap;
+	flex-wrap: wrap;
 }
 .conteiner {
 	width: 20vw;
-	border: 1px solid #333;
-	height: 50vh;
+	border: 0.5px solid #333;
+	height: 70vh;
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
+	margin-bottom: 10px;
+	text-align: center;
 }
 .conteiner-img {
-	height: 50%;
+	height: 60%;
 	width: 100%;
-	
-		background-repeat: no-repeat;
-			background-size: cover;
-			background-position: center;
+	object-fit: contain;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+.main-news {
 }
 .text-news {
-	
+}
+.butt-learn {
+	border-radius: 100px;
+	cursor: text;
+	background-color: #ffc600;
+	padding: 1rem 1rem;
+	font-family: "Inter Tight", sans-serif;
+	margin: 0 auto;
+	width: 50%;
+	margin-bottom: 5px;
+}
+@media screen and (max-width: 1024px) {
+	.conteiner {
+		width: 70%;
+		font-size: 1rem;
+		text-align: center;
+	}
+	.butt-learn {
+		font-size: 2rem;
+	}
+}
+@media screen and (max-width: 768px) {
+	.conteiner {
+		width: 90%;
+		font-size: 2rem;
+		text-align: center;
+	}
+	.butt-learn {
+		font-size: 1.5rem;
+	}
 }
