--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -14,5 +14,5 @@ body {
 	min-width: 291px;
 	margin: 0 auto;
 	height: 3000px;
-	background-color: rgb(170, 170, 167);
+	background-color: #ffffff;
 }
