--- a/my-app/src/style/sales.css
+++ b/my-app/src/style/sales.css
@@ -17,13 +17,18 @@
 }
 .conteiner {
 	width: 20vw;
-	border: 0.5px solid #333;
 	height: 70vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	margin-bottom: 10px;
 	text-align: center;
+	padding-left: 0;
+}
+.conteiner:hover {
+	border: 0.1px solid #333;
+	border-radius: 50px;
+	/* padding-left: 4px; */
 }
 .conteiner-img {
 	height: 60%;
@@ -32,6 +37,7 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
+	border-radius: 50px;
 }
 .main-news {
 }
@@ -41,11 +47,16 @@
 	border-radius: 100px;
 	cursor: text;
 	background-color: #ffc600;
+	border: none;
 	padding: 1rem 1rem;
 	font-family: "Inter Tight", sans-serif;
 	margin: 0 auto;
 	width: 50%;
 	margin-bottom: 5px;
+}
+.butt-learn:hover {
+	border: 1px solid #333;
+	background-color: #e3b50b;
 }
 @media screen and (max-width: 1024px) {
 	.conteiner {
