--- a/my-app/src/style/gallery.css
+++ b/my-app/src/style/gallery.css
@@ -1,7 +1,9 @@
-.gallerys {
+.gallery {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	margin: 0 auto;
+	width: 100%;
 }
 .but-prev {
 	font-size: 1.5rem;
@@ -12,8 +14,8 @@
 	margin: 0 1rem;
 }
 .photo {
-	width: 300px;
-	height: 201px;
+	width: 50%;
+	height: auto;
 	object-fit: cover;
 	border-radius: 10px;
 }
