--- a/my-app/src/style/gallery.css
+++ b/my-app/src/style/gallery.css
@@ -1,12 +1,16 @@
+.wrap-home{
+box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+background-color: #f5f5f5;
+}
 .gallery {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	gap: 20px;
 	padding: 20px;
-	background-color: #f5f5f5;
+	
 	border-radius: 15px;
-	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	
 	max-width: 1200px;
 	margin: 20px auto;
 }
