--- a/my-app/src/style/home.css
+++ b/my-app/src/style/home.css
@@ -7,7 +7,7 @@
 .wraper {
 	width: 100%;
 	height: 100vh;
-	background-image: url("../img/Zal.jpeg");
+	background-image: url("../img/weel.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
